--- a/src/router/router.scss
+++ b/src/router/router.scss
@@ -1,46 +1,42 @@
-
-%shared-display{
-  // display: flex;
+%shared-display {
+  display: flex;
   justify-content: center;
 }
-.grid-container { //Grid layout setup
+.grid-container {
+  //Grid layout setup
   display: grid;
   grid-template-columns: 60px 1fr 60px;
   grid-template-rows: auto auto auto;
-  grid-template-areas: "NAV NAV  NAV" "FILE APP MAP";
+  grid-template-areas: "NAV NAV  NAV" "file APP Map ";
+  width: 100vw;
 }
 
 .link-1 {
   grid-area: FILE;
 }
+.link-2 {
+  grid-area: MAP;
+}
+
 .navbar {
   z-index: 100;
   position: sticky;
-  // width: auto;
-  // height: 5.5rem;
   grid-area: NAV;
 }
-
 
 .app {
   @extend %shared-display;
   background: url(#{$path}/background.png) $bg_color;
   grid-area: APP;
 }
-.link-2 {
-  @extend %shared-display;
-  grid-area: MAP;
-}
-
-.appbar{
+.appbar {
   z-index: 1;
-
 }
 
-@media screen and (max-width: 475px){
-  .grid-container{
-display: flex;
-flex-direction: column;
+@media (max-width: 768px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas: "NAV" "APP";
   }
-
 }
